--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 	<head>
-		<title>Article Site</title>
+		<title>TechCodeCraft</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
