chore: database connection

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 				</div>
 				<div>
 					<a href="#" class="mx-2">Home</a>
-					<a href="#" class="mx-2">Services</a>
+					<a href="login" class="mx-2">Login</a>
 					<a href="#" class="mx-2">Document</a>
 					<button type="button" onclick="location.href='/create'"
 						class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
