--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
 
 	<!-- テキストとボタン要素 -->
     <div class="z-10 relative text-white">
-        <h1 class="text-4xl mb-4 font-bold">Preservation of Technical Experience</h1>
+        <h1 class="text-4xl mb-4 font-bold">Infuse innovation into that space.</h1>
         <p class="text-xl font-bold">
             By storing the technologies I have learned in a way that suits my preferences, I support the improvement of my
             skills.
