Change: background video

--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -3,8 +3,14 @@
     <form action="/create" method="post">
         <label for="title">タイトル:</label><br>
         <input type="text" id="title" name="title"><br>
+        
+        <label for="subtitle">サブタイトル:</label><br>
+        <input type="texa" id="subtitle" name="subtitle"><br>
+        
+        
         <label for="content">コンテント:</label><br>
         <textarea id="content" name="content"></textarea><br>
+        
         <input type="submit" value="投稿">
     </form>
 {% endblock %}
