--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,9 +2,10 @@
 {% block content %}
     {% for post in posts %}
     <article>
-    	<header>
-        <p><small>{{ post.timestamp.strftime('%Y-%m-%d %H:%M') }}</small></p>
-    	</header>
+        <header>
+            <p>{{ post.user.username }}</p>
+            <p><small>{{ (current_time - post.timestamp).days }} days ago</small></p>
+        </header>
         <h2>{{ post.title }}</h2>
         <hr>
     </article>
