--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,13 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-<h2>Sign Up</h2>
-<form method="POST">
-    <label for="username">Username:</label><br>
-    <input type="text" id="username" name="username" required><br>
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" required><br>
-    <input type="submit" value="Sign Up">
-</form>
+<div class="flex justify-center items-center h-screen">
+    <div class="bg-white p-8 shadow-md rounded-md w-2/5">
+        <h2 class="text-2xl font-semibold mb-6">Signup</h2>
+        <form method="POST" class="space-y-4">
+            <div>
+                <label for="username" class="block text-sm font-medium text-gray-600">Username:</label>
+                <input type="text" id="username" name="username" required
+                       class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <div>
+                <label for="username" class="block text-sm font-midium text-gray-600">Email:</label>
+                <input type="email" id="email" name="email" required
+                        class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <div>
+                <label for="password" class="block text-sm font-medium text-gray-600">Password:</label>
+                <input type="password" id="password" name="password" required
+                       class="mt-1 p-2 w-full border rounded-md">
+            </div>
+            <div>
+                <button type="submit"
+                        class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue">
+                    Login
+                </button>
+            </div>
+            <div>
+                <p>アカウントをすでにお持ちですか？<a href="/login" class="text-blue-500 underline underline-offset-1">ログイン</a></p>
+            </div>
 {% endblock %}
