--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="scroll-smooth">
 
 	<head>
 		<title>TechCodeCraft</title>
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
 		<link href="{{ url_for('static', filename='css/output.css') }}" rel="stylesheet">
+		<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 	</head>
 
 	<body>
