--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,12 +2,12 @@
 {% block content %}
 
 <!-- 上の方のヘッダー -->
-<header class="bg-transparent absolute z-10 w-full">
+<header class="bg-transparent fixed z-10 w-full">
 	<nav class="p-4 text-white">
 		<div class="container mx-auto">
 			<div class="flex justify-between">
 				<div>
-					<a href="#" class="text-lg font-semibold">TechCodeCraft</a>
+					<a href="#top" class="text-lg font-semibold">TechCodeCraft</a>
 				</div>
 				<div>
 					<a href="/" class="mx-2">Home</a>
@@ -21,11 +21,11 @@
 </header>
 
 <!-- メインの要素 -->
-<main class="text-center relative h-screen flex justify-center items-center">
+<main id="top" class="text-center relative h-screen flex justify-center items-center">
 
 	<!-- 動画を背景にする要素 -->
     <video autoplay loop muted playsinline class="absolute w-full h-full object-cover">
-        <source src="{{ url_for('static', filename='video/bgvivivi.mp4') }}" type="video/mp4">
+        <source src="{{ url_for('static', filename='video/rebackground.mp4') }}" type="video/mp4">
     </video>
 
 	<!-- テキストとボタン要素 -->
