Change: top page layuot

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,13 +6,13 @@
             <div class="container mx-auto">
                 <div class="flex justify-between">
                     <div>
-                        <a href="#top" class="text-lg font-semibold">TechCodeCraft</a>
+                        <a href="#top" class="text-lg font-semibold logo-font">TechCodeCraft</a>
                     </div>
                     <div>
                         <a href="/" class="mx-2 hover-underline">Home</a>
                         <a href="#" class="mx-2 hover-underline">About</a>
+                        <a href="#" class="mx-2 hover-underline">Feature</a>
                         <a href="#" class="mx-2 hover-underline">Document</a>
-                        <a href="#" class="mx-2 hover-underline">Profile</a>
                     </div>
                 </div>
             </div>
@@ -32,11 +32,7 @@
         </video>
         <!-- テキストとボタン要素 -->
         <div class="z-10 relative text-white">
-            <h1 class="text-4xl mb-4 font-bold">Infuse innovation into that space.</h1>
-            <p class="text-xl font-bold">
-                By storing the technologies I have learned in a way that suits my preferences, I support the improvement of my
-                skills.
-            </p>
+            <h1 class="text-4xl mb-4 font-bold logo-font">TechCodeCraft</h1>
 
 			<!-- homeに遷移させるボタンプログラム -->
             <button onclick="location.href='/home'"
@@ -52,27 +48,12 @@
 			</button>
             </div>
         </main>
-        <section class="container mx-auto py-20">
-            <h2 class="text-3xl mb-10 text-center">Tech Skills Learned</h2>
-            <div class="grid grid-cols-3 gap-10">
-                <div class="bg-blue-100 p-4">
-                    <h3 class="text-xl mb-2">Web Development</h3>
-                    <p>Let our expert developers create dynamic and responsive web applications tailored to your needs.</p>
-                </div>
-                <div class="bg-blue-100 p-4">
-                    <h3 class="text-xl mb-2">Web Automation</h3>
-                    <p>
-                        Enhance efficiency through our web automation solutions, leveraging technology to optimize tasks,
-                        minimize errors, and save time.
-                    </p>
-                </div>
-                <div class="bg-blue-100 p-4">
-                    <h3 class="text-xl mb-2">Automotive Software</h3>
-                    <p>
-                        In the era of smart vehicles, we drive automotive innovation through software solutions for infotainment
-                        and vehicle management.
-                    </p>
-                </div>
+        <section class="mx-auto py-20">
+        	<div>
+            <h2 class="text-3xl mb-10 text-center">About</h2>
+            	<h1>Infuse innovation into that space.</h1>
+            	<p>By storing the technologies I have learned in a way that suits my preferences, I support the improvement of my
+                skills.</p>
             </div>
         </section>
     {% endblock %}
