--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -19,3 +19,8 @@
     width: 100%;
 }
 /*end:ホバーアニメーション*/
+
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Inconsolata&family=Rajdhani:wght@500&display=swap');
+.logo-font {
+	font-family: 'Rajdhani' sans-serif;
+}
