--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,45 +1,31 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="flex justify-center items-center h-screen">
-    <div class="bg-white p-8 shadow-md rounded-md w-2/5">
-        <h2 class="text-2xl font-semibold mb-6">Login</h2>
-        <form method="POST" class="space-y-4">
-            <div>
-                <label for="username" class="block text-sm font-medium text-gray-600">Username:</label>
-                <input type="text" id="username" name="username" required
-                       class="mt-1 p-2 w-full border rounded-md">
-            </div>
-            <div>
-                <label for="password" class="block text-sm font-medium text-gray-600">Password:</label>
-                <input type="password" id="password" name="password" required
-                       class="mt-1 p-2 w-full border rounded-md">
-            </div>
-            <div>
-                <button type="submit"
-                        class="w-full bg-blue-500 text-white p-2 rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue">
-                    Login
-                </button>
-            </div>
-            <div>
-                <p>アカウントをお持ちでないですか？<a href="/signup" class="text-blue-500 underline underline-offset-1">サインアップ</a></p>
-            </div>
-            <div>
-                <button type="button" class="text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2 z-10">
-                    <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
-                    <path fill-rule="evenodd" d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z" clip-rule="evenodd"/>
-                    </svg>
-                    Sign in with Github
-                    </button>
-            </div>
-            <div>
-                <button type="button" class=" z-10 text-white bg-[#4285F4] hover:bg-[#4285F4]/90 focus:ring-4 focus:outline-none focus:ring-[#4285F4]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-[#4285F4]/55 me-2 mb-2">
-                    <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 19">
-                    <path fill-rule="evenodd" d="M8.842 18.083a8.8 8.8 0 0 1-8.65-8.948 8.841 8.841 0 0 1 8.8-8.652h.153a8.464 8.464 0 0 1 5.7 2.257l-2.193 2.038A5.27 5.27 0 0 0 9.09 3.4a5.882 5.882 0 0 0-.2 11.76h.124a5.091 5.091 0 0 0 5.248-4.057L14.3 11H9V8h8.34c.066.543.095 1.09.088 1.636-.086 5.053-3.463 8.449-8.4 8.449l-.186-.002Z" clip-rule="evenodd"/>
-                    </svg>
-                    Sign in with Google
-                    </button>
-            </div>
-        </form>
-    </div>
-</div>
+<section class="flex justify-center items-center h-screen bg-gray-800">
+    <form class="w-full max-w-sm bg-gray-900 rounded-lg p-8">
+        <div class="mb-6">
+            <label class="block text-gray-500 font-bold mb-2" for="inline-full-name">UserName</label>
+            <input class="bg-gray-800 text-white appearance-none border-2 border-gray-600 rounded w-full py-2 px-4 leading-tight focus:outline-none focus:border-white"
+                   id="inline-full-name"
+                   type="text"
+                   placeholder="Your Name">
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-500 font-bold mb-2" for="inline-password">Password</label>
+            <input class="bg-gray-800 text-white appearance-none border-2 border-gray-600 rounded w-full py-2 px-4 leading-tight focus:outline-none focus:border-white"
+                   id="inline-password"
+                   type="password"
+                   placeholder="******************">
+        </div>
+        <div class="mb-6">
+            <label class="block text-gray-500 font-bold">
+                <input class="mr-2 leading-tight" type="checkbox">
+                <span class="text-sm text-white">Send me your newsletter!</span>
+            </label>
+        </div>
+        <div class="flex items-center">
+            <button class="bg-gray-700 hover:bg-gray-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    type="button">Sign Up</button>
+        </div>
+    </form>
+</section>
 {% endblock %}
