Change: layout home.html
use grid property

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
 		<script src="{{ url_for('static', filename='js/script.js') }}"></script>
 	</head>
 
-	<body>
+	<body class="bg-black text-white">
 		{% block content %}
 		{% endblock %}
 	</body>
