--- a/app/templates/create.html
+++ b/app/templates/create.html
@@ -2,14 +2,15 @@
 {% block content %}
     <form action="/create" method="post">
         <label for="title">タイトル:</label><br>
-        <input type="text" id="title" name="title"><br>
+        <input type="text" id="title" name="title" class="text-black"><br>
         
         <label for="subtitle">サブタイトル:</label><br>
-        <input type="texa" id="subtitle" name="subtitle"><br>
+        <input type="texa" id="subtitle" name="subtitle" class="text-black"><br>
+        
         
         
         <label for="content">コンテント:</label><br>
-        <textarea id="content" name="content"></textarea><br>
+        <textarea id="content" name="content" class="text-black"></textarea><br>
         
         <input type="submit" value="投稿">
     </form>
