--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -57,14 +57,17 @@
             </div>
         </div>
     </main>
-    <section class="mx-auto py-20">
-        <div>
+    <section class="mx-auto py-20 text-white">
+        <div class="px-40">
             <h2 class="text-3xl mb-10 text-center">About</h2>
-            <h1>Infuse innovation into that space.</h1>
-            <p>
-                By storing the technologies I have learned in a way that suits my preferences, I support the improvement of my
-                skills.
-            </p>
+            <div class="flex justify-end">
+            	<h1 class="text-2xl">Infuse innovation into that space.
+            		<p>
+                		By storing the technologies <br> I have learned in a way that suits <br> my preferences, <br> I support the improvement of my
+                		skills.
+            		</p>
+            	</h1>
+            </div>
         </div>
     </section>
 {% endblock %}
