--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -20,6 +20,7 @@
 }
 /*end:ホバーアニメーション*/
 
+/*フォントの設定*/
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Inconsolata&family=Montserrat:wght@100&family=Rajdhani:wght@500&family=Roboto:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Inconsolata&family=Montserrat:wght@100&family=Rajdhani:wght@500&display=swap');
 
@@ -31,3 +32,6 @@
 	font-family: 'Montserrat', sans-serif;
 	text-align: left;
 }
+
+
+
